<resources>
	<string name="app_name">Dialer Settings</string>
	<string name="app_description">Add SmartDial whit T9 PinYin, call attribution, call vibrations for Android 5.x(AOSP) Dialer app.</string>

	<!-- Call vibrations -->
	<string name="pref_call_vibrations_title">Call vibrations</string>
	<string name="call_vibration_connected">On call connected</string>
	<string name="call_vibration_disconnected">On call disconnected</string>
	<string name="call_vibration_waiting">On call waiting</string>

	<!-- Call log -->
	<string name="pref_call_log_title">Call attribution</string>
	<string name="call_log_attr">Call log attribution</string>
	<string name="call_incoming_attr">Incoming/Outgoing call attribution</string>
	<string name="call_for_china">Force to use China country iso code</string>

	<!-- Call Dial -->
	<string name="pref_dial_pad_title">DialPad Settings</string>
	<string name="dial_pad_show">Shows dialpad automatically upon opening dialer app</string>
	<string name="smart_dial">Smart dial for chinese T9 Pinyin</string>
	<string name="smart_dial_summary">NOTICE:To use it, you must clear data of the Dialer app</string>

	<!-- About -->
	<string name="about">About</string>
	<string name="version">Version</string>
	<string name="author">Author</string>
	<string name="author_name" translatable="false">Wayne &lt;ywj2167917@gmail.com&gt;</string>
	<string name="source_code">Source code</string>
	<string name="source_code_url" translatable="false">https://github.com/waynell/DialerBox</string>

</resources>
